@@ -28,9 +28,9 @@ dependencies {
     compile 'org.apache.httpcomponents:httpclient:4.5.13'
     compile 'org.apache.logging.log4j:log4j-api:2.18.0'
     compile 'org.apache.logging.log4j:log4j-core:2.18.0'
-    compile 'com.oracle.database.jdbc:ojdbc8:19.15.0.0'
-    compile 'org.springframework:spring-beans:5.3.19'
-    compile 'org.springframework:spring-jdbc:5.3.19'
+    compile 'com.oracle.database.jdbc:ojdbc8:19.16.0.0'
+    compile 'org.springframework:spring-beans:5.3.20'
+    compile 'org.springframework:spring-jdbc:5.3.20'
 
     compile fileTree(dir: 'lib', include: '*.jar')
 }
