@@ -2,7 +2,7 @@
 # load ClinVar tracks into human hg38, hg19 and hg18 assemblies
 
 ###### VARIABLE DECLARATIONS ######
-jbrowseHome="/rgd/JBrowse-1.16.3/"
+jbrowseHome="/rgd/JBrowse-1.16.11/"
 
 mainGFF3home="/rgd/data/gff3"
 workingDir="pipelineOutput"
