@@ -2,7 +2,7 @@
 # load dbSnp tracks into human hg38 and hg19
 
 ###### VARIABLE DECLARATIONS ######
-jbrowseHome="/rgd/JBrowse-1.16.3/"
+jbrowseHome="/rgd/JBrowse-1.16.11/"
 
 mainGFF3home="/rgd/data/gff3"
 workingDir="pipelineOutput"
