@@ -1,3 +1,6 @@
+Sep 09, 2022
+  jbrowse scripts: changed JBrowse-1.16.3 into JBrowse-1.16.11 to avoid perl problems on new machine
+
 Aug 08, 2022
   agr: fix in tr biotype processing
 
